--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Crime In Hertfordshire</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/dc.min.css">
+    <link rel="stylesheet" href="css/spin.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -34,12 +35,16 @@
             <!-- Main section for all data rendering -->
             <div class="col-sm-11 main-body">
                 <div class="row">
+                    <div id="loader"></div>
+                    
                     <div class="col-sm-12 col-md-6" id="one">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Crime Map <small>(Click on a region for refined info)</small></h5>
                             </div>
-                            <div id="crimeMap" class="card-img-top"></div>
+                            <div id="crimeMap" class="card-img-top">
+                                
+                            </div>
                         </div>
                     </div>
 
@@ -74,6 +79,7 @@
     </main>
 
     <!-- <script type="text/javascript" src="scripts/bootstrap.min.js"></script>-->
+    <script type="text/javascript" src="scripts/spin.js"></script>
     <script type="text/javascript" src="scripts/d3.min.js"></script>
     <script type="text/javascript" src="scripts/crossfilter.min.js"></script>
     <script type="text/javascript" src="scripts/dc.min.js"></script>
