Made a start on responsive mobileness

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div id="loader"></div>
 
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-sm-12">
                         <div class="card" id="one">
                             <h5 class="card-header text-white bg-secondary">Crime Map <small>(Click on a region for refined info)</small></h5>
                             <div class="card-body bg-light">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-12 col-md-5">
+                    <div class="col-sm-12 col-md-4">
                         <div class="card" id="two">
                             <h5 class="card-header text-white bg-secondary">Type of crime</h5>
                             <div class="card-body bg-light">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-12 col-md-5">
+                    <div class="col-sm-12 col-md-4">
                         <div class="card" id="three">
                             <h5 class="card-header text-white bg-secondary">Month total</h5>
                             <div class="card-body bg-light">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-sm-12 col-md-4">
                         <div class="card" id="four">
                                 <h5 class="card-header text-white bg-secondary">Outcome of Crime</h5>
                             <div class="card-body bg-light">
