Responsive update and colour scheme

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <script type="text/javascript" src="scripts/crossfilter.min.js"></script>
     <script type="text/javascript" src="scripts/dc.min.js"></script>
     <script type="text/javascript" src="scripts/queue.min.js"></script>
-    <script src="https://d3js.org/d3-color.v1.min.js"></script>
-    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
 
 </body>
