--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 <body>
     <nav class="navbar sticky-top navbar-dark bg-crime">
         <span class="navbar-brand mb-0 h1">Street crime in Hertfordshire</span>
-        <span id="totalCrime" class="h4 text-white"></span>
     </nav>
 
     <main class="container-fluid">
         <div class="row">
             <!-- Left coloumn for month selection -->
-            <div class="col-sm-12 col-md-2 col-lg-1 left-bar">
+            <div class="col-sm-12 col-md-2 col-lg-2 left-bar">
                 <div id="monthSelect" class="text-white text-center left-bar-body">
                     <h5>Select Month<br><small>(Ctrl + Click to select multiple)</small></h5>
                 </div>
@@ -32,8 +31,10 @@
             </div>
 
             <!-- Main section for all data rendering -->
-            <div class="col-sm-12 col-md-10 col-lg-11 main-body">
+            <div class="col-sm-12 col-md-10 col-lg-10 main-body">
                 <div class="row">
+                    <h2 id="totalCrime" class="text-dark"></h2>
+
                     <div id="loader"></div>
 
                     <div class="col-sm-12">
