--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <div class="row">
                     <h2 id="totalCrime" class="text-dark"></h2>
 
-                    <div id="loader"></div>
+                    <div id="loader">
+                        <h4 class="loadText">Loading Data, One Moment...</h4>
+                    </div>
 
                     <div class="col-sm-12">
                         <div class="card" id="one">
