fixed styling and alyout for all elements, updated readme with UX info

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
 
                     <!-- Bootstrap elemetns for displaying pie chart -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="card" id="two">
                             <h5 class="card-header text-white bg-crime-second">Type of crime</h5>
                             <div class="card-body bg-light">
@@ -67,7 +67,7 @@
                     </div>
 
                     <!-- Bootstrap elemetns for displaying bar chart -->
-                    <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
                         <div class="card" id="three">
                             <h5 class="card-header text-white bg-crime-second">Month total</h5>
                             <div class="card-body bg-light">
@@ -77,7 +77,7 @@
                     </div>
 
                     <!-- Bootstrap elemetns for displaying row chart -->
-                    <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="col-sm-12 col-md-12 col-xl-4">
                         <div class="card" id="four">
                             <h5 class="card-header text-white bg-crime-second">Outcome of Crime</h5>
                             <div class="card-body bg-light">
